<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#575757"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_trashcan"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_trashcan_delete"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_trashcan_restore"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>