<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#575757"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/dialog_enter_password"
        android:textColorHint="#a3a3a3"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_enter_password_cancel"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />
        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_enter_password_enter"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

